CSS Overflow Fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1744,6 +1744,7 @@ table.performance-summary {
     padding-bottom: 70%;
     float: left;
     height: 0;
+    overflow: hidden;
 
   img {
     width: 100%;
